--- a/app/index.html
+++ b/app/index.html
@@ -15,7 +15,7 @@
                 <a href="/" class="logo"><span class="logo__bold">Ст</span><span class="logo__thin">ас</span></a>
                 <nav class="menu">
                     <ul class="menu__container">
-                        <li class="menu__item"><a href="#header" class="menu__link">Главная</a></li>
+                        <li class="menu__item"><a href="#header" class="menu__link menu__link-active">Главная</a></li>
                         <li class="menu__item"><a href="#whyThis" class="menu__link">О нас</a></li>
                         <li class="menu__item"><a href="#price" class="menu__link">Цены</a></li>
                         <li class="menu__item"><a href="#say" class="menu__link">Отзывы</a></li>
@@ -428,128 +428,146 @@
 
                 <ul class="say__list tns-sl">
                     <li class="say__item">
-                        <p class="say__p">1Lorem ipsum dolor sit amet,
-                            consectetur adipisicing elit. Doloribus
-                            accusamus expedita repellat similique
-                            odio aspernatur ex, architecto eaque
-                            quo suscipit.</p>
-                        <div class="say__user-container">
-                            <div class="wrap__img-user"><img src="img/dest/avatar1.webp" alt="avatar1"></div>
-                            <div class="say__user-container-data">
-                                <div class="say__name-user">Jeremy H.</div>
-                                <div class="say__profession">Manager</div>
+                        <div class="wrap-content-item">
+                            <p class="say__p">1Lorem ipsum dolor sit amet,
+                                consectetur adipisicing elit. Doloribus
+                                accusamus expedita repellat similique
+                                odio aspernatur ex, architecto eaque
+                                quo suscipit.</p>
+                            <div class="say__user-container">
+                                <div class="wrap__img-user"><img src="img/dest/avatar1.webp" alt="avatar1"></div>
+                                <div class="say__user-container-data">
+                                    <div class="say__name-user">Jeremy H.</div>
+                                    <div class="say__profession">Manager</div>
+                                </div>
                             </div>
                         </div>
                     </li>
                     <li class="say__item">
-                        <p class="say__p">2Lorem ipsum dolor sit amet,
-                            consectetur adipisicing elit. Doloribus
-                            accusamus expedita repellat similique
-                            odio aspernatur ex, architecto eaque
-                            quo suscipit.</p>
-                        <div class="say__user-container">
-                            <div class="wrap__img-user"><img src="img/dest/avatar2.webp" alt="avatar2"></div>
-                            <div class="say__user-container-data">
-                                <div class="say__name-user">John S.</div>
-                                <div class="say__profession">Freelancer</div>
+                        <div class="wrap-content-item">
+                            <p class="say__p">2Lorem ipsum dolor sit amet,
+                                consectetur adipisicing elit. Doloribus
+                                accusamus expedita repellat similique
+                                odio aspernatur ex, architecto eaque
+                                quo suscipit.</p>
+                            <div class="say__user-container">
+                                <div class="wrap__img-user"><img src="img/dest/avatar2.webp" alt="avatar2"></div>
+                                <div class="say__user-container-data">
+                                    <div class="say__name-user">John S.</div>
+                                    <div class="say__profession">Freelancer</div>
+                                </div>
                             </div>
                         </div>
                     </li>
                     <li class="say__item">
-                        <p class="say__p">3Lorem ipsum dolor sit amet,
-                            consectetur adipisicing elit. Doloribus
-                            accusamus expedita repellat similique
-                            odio aspernatur ex, architecto eaque
-                            quo suscipit.</p>
-                        <div class="say__user-container">
-                            <div class="wrap__img-user"><img src="img/dest/avatar3.webp" alt="avatar3"></div>
-                            <div class="say__user-container-data">
-                                <div class="say__name-user">Susan W.</div>
-                                <div class="say__profession">Photographer</div>
+                        <div class="wrap-content-item">
+                            <p class="say__p">3Lorem ipsum dolor sit amet,
+                                consectetur adipisicing elit. Doloribus
+                                accusamus expedita repellat similique
+                                odio aspernatur ex, architecto eaque
+                                quo suscipit.</p>
+                            <div class="say__user-container">
+                                <div class="wrap__img-user"><img src="img/dest/avatar3.webp" alt="avatar3"></div>
+                                <div class="say__user-container-data">
+                                    <div class="say__name-user">Susan W.</div>
+                                    <div class="say__profession">Photographer</div>
+                                </div>
                             </div>
                         </div>
                     </li>
                     <li class="say__item">
-                        <p class="say__p">4Lorem ipsum dolor sit amet,
-                            consectetur adipisicing elit. Doloribus
-                            accusamus expedita repellat similique
-                            odio aspernatur ex, architecto eaque
-                            quo suscipit.</p>
-                        <div class="say__user-container">
-                            <div class="wrap__img-user"><img src="img/dest/avatar1.webp" alt="avatar1"></div>
-                            <div class="say__user-container-data">
-                                <div class="say__name-user">Jeremy H.</div>
-                                <div class="say__profession">Manager</div>
+                        <div class="wrap-content-item">
+                            <p class="say__p">4Lorem ipsum dolor sit amet,
+                                consectetur adipisicing elit. Doloribus
+                                accusamus expedita repellat similique
+                                odio aspernatur ex, architecto eaque
+                                quo suscipit.</p>
+                            <div class="say__user-container">
+                                <div class="wrap__img-user"><img src="img/dest/avatar1.webp" alt="avatar1"></div>
+                                <div class="say__user-container-data">
+                                    <div class="say__name-user">Jeremy H.</div>
+                                    <div class="say__profession">Manager</div>
+                                </div>
                             </div>
                         </div>
                     </li>
                     <li class="say__item">
-                        <p class="say__p">5Lorem ipsum dolor sit amet,
-                            consectetur adipisicing elit. Doloribus
-                            accusamus expedita repellat similique
-                            odio aspernatur ex, architecto eaque
-                            quo suscipit.</p>
-                        <div class="say__user-container">
-                            <div class="wrap__img-user"><img src="img/dest/avatar2.webp" alt="avatar2"></div>
-                            <div class="say__user-container-data">
-                                <div class="say__name-user">John S.</div>
-                                <div class="say__profession">Freelancer</div>
+                        <div class="wrap-content-item">
+                            <p class="say__p">5Lorem ipsum dolor sit amet,
+                                consectetur adipisicing elit. Doloribus
+                                accusamus expedita repellat similique
+                                odio aspernatur ex, architecto eaque
+                                quo suscipit.</p>
+                            <div class="say__user-container">
+                                <div class="wrap__img-user"><img src="img/dest/avatar2.webp" alt="avatar2"></div>
+                                <div class="say__user-container-data">
+                                    <div class="say__name-user">John S.</div>
+                                    <div class="say__profession">Freelancer</div>
+                                </div>
                             </div>
                         </div>
                     </li>
                     <li class="say__item">
-                        <p class="say__p">6Lorem ipsum dolor sit amet,
-                            consectetur adipisicing elit. Doloribus
-                            accusamus expedita repellat similique
-                            odio aspernatur ex, architecto eaque
-                            quo suscipit.</p>
-                        <div class="say__user-container">
-                            <div class="wrap__img-user"><img src="img/dest/avatar3.webp" alt="avatar3"></div>
-                            <div class="say__user-container-data">
-                                <div class="say__name-user">Susan W.</div>
-                                <div class="say__profession">Photographer</div>
+                        <div class="wrap-content-item">
+                            <p class="say__p">6Lorem ipsum dolor sit amet,
+                                consectetur adipisicing elit. Doloribus
+                                accusamus expedita repellat similique
+                                odio aspernatur ex, architecto eaque
+                                quo suscipit.</p>
+                            <div class="say__user-container">
+                                <div class="wrap__img-user"><img src="img/dest/avatar3.webp" alt="avatar3"></div>
+                                <div class="say__user-container-data">
+                                    <div class="say__name-user">Susan W.</div>
+                                    <div class="say__profession">Photographer</div>
+                                </div>
                             </div>
                         </div>
                     </li>
                     <li class="say__item">
-                        <p class="say__p">7Lorem ipsum dolor sit amet,
-                            consectetur adipisicing elit. Doloribus
-                            accusamus expedita repellat similique
-                            odio aspernatur ex, architecto eaque
-                            quo suscipit.</p>
-                        <div class="say__user-container">
-                            <div class="wrap__img-user"><img src="img/dest/avatar1.webp" alt="avatar1"></div>
-                            <div class="say__user-container-data">
-                                <div class="say__name-user">Jeremy H.</div>
-                                <div class="say__profession">Manager</div>
+                        <div class="wrap-content-item">
+                            <p class="say__p">7Lorem ipsum dolor sit amet,
+                                consectetur adipisicing elit. Doloribus
+                                accusamus expedita repellat similique
+                                odio aspernatur ex, architecto eaque
+                                quo suscipit.</p>
+                            <div class="say__user-container">
+                                <div class="wrap__img-user"><img src="img/dest/avatar1.webp" alt="avatar1"></div>
+                                <div class="say__user-container-data">
+                                    <div class="say__name-user">Jeremy H.</div>
+                                    <div class="say__profession">Manager</div>
+                                </div>
                             </div>
                         </div>
                     </li>
                     <li class="say__item">
-                        <p class="say__p">8Lorem ipsum dolor sit amet,
-                            consectetur adipisicing elit. Doloribus
-                            accusamus expedita repellat similique
-                            odio aspernatur ex, architecto eaque
-                            quo suscipit.</p>
-                        <div class="say__user-container">
-                            <div class="wrap__img-user"><img src="img/dest/avatar2.webp" alt="avatar2"></div>
-                            <div class="say__user-container-data">
-                                <div class="say__name-user">John S.</div>
-                                <div class="say__profession">Freelancer</div>
+                        <div class="wrap-content-item">
+                            <p class="say__p">8Lorem ipsum dolor sit amet,
+                                consectetur adipisicing elit. Doloribus
+                                accusamus expedita repellat similique
+                                odio aspernatur ex, architecto eaque
+                                quo suscipit.</p>
+                            <div class="say__user-container">
+                                <div class="wrap__img-user"><img src="img/dest/avatar2.webp" alt="avatar2"></div>
+                                <div class="say__user-container-data">
+                                    <div class="say__name-user">John S.</div>
+                                    <div class="say__profession">Freelancer</div>
+                                </div>
                             </div>
                         </div>
                     </li>
                     <li class="say__item">
-                        <p class="say__p">9Lorem ipsum dolor sit amet,
-                            consectetur adipisicing elit. Doloribus
-                            accusamus expedita repellat similique
-                            odio aspernatur ex, architecto eaque
-                            quo suscipit.</p>
-                        <div class="say__user-container">
-                            <div class="wrap__img-user"><img src="img/dest/avatar3.webp" alt="avatar3"></div>
-                            <div class="say__user-container-data">
-                                <div class="say__name-user">Susan W.</div>
-                                <div class="say__profession">Photographer</div>
+                        <div class="wrap-content-item">
+                            <p class="say__p">9Lorem ipsum dolor sit amet,
+                                consectetur adipisicing elit. Doloribus
+                                accusamus expedita repellat similique
+                                odio aspernatur ex, architecto eaque
+                                quo suscipit.</p>
+                            <div class="say__user-container">
+                                <div class="wrap__img-user"><img src="img/dest/avatar3.webp" alt="avatar3"></div>
+                                <div class="say__user-container-data">
+                                    <div class="say__name-user">Susan W.</div>
+                                    <div class="say__profession">Photographer</div>
+                                </div>
                             </div>
                         </div>
                     </li>
@@ -582,7 +600,8 @@
                     </div>
                     <div class="contact__form2Block">
                         <label for="form__msg-footer" class="form__label">
-                            <textarea name="" id="form__msg-footer" cols="30" rows="10" placeholder="Сообщение"></textarea>
+                            <textarea name="form__msg-footer" id="form__msg-footer" cols="30" rows="10"
+                                      placeholder="Сообщение"></textarea>
                         </label>
                     </div>
                     <div class="wrap-form-btn">
@@ -672,14 +691,12 @@
         <symbol id="icon-cloud-download" viewBox="0 0 32 32">
             <path d="M27.844 11.252c-0.101-4.022-3.389-7.252-7.433-7.252-2.369 0-4.477 1.109-5.839 2.835-0.764-0.987-1.959-1.624-3.303-1.624-2.307 0-4.176 1.871-4.176 4.179 0 0.201 0.015 0.399 0.043 0.592-0.351-0.063-0.711-0.098-1.080-0.098-3.344-0-6.054 2.712-6.054 6.058s2.71 6.058 6.054 6.058h2.868l7.078 7.328 7.078-7.328 3.484-0c3.004-0.006 5.438-2.444 5.438-5.451 0-2.565-1.771-4.716-4.156-5.296zM16 26l-6-6h4v-6h4v6h4l-6 6z"></path>
         </symbol>
-        <symbol id="icon-cloud-download" viewBox="0 0 32 32">
-            <path d="M27.844 11.252c-0.101-4.022-3.389-7.252-7.433-7.252-2.369 0-4.477 1.109-5.839 2.835-0.764-0.987-1.959-1.624-3.303-1.624-2.307 0-4.176 1.871-4.176 4.179 0 0.201 0.015 0.399 0.043 0.592-0.351-0.063-0.711-0.098-1.080-0.098-3.344-0-6.054 2.712-6.054 6.058s2.71 6.058 6.054 6.058h2.868l7.078 7.328 7.078-7.328 3.484-0c3.004-0.006 5.438-2.444 5.438-5.451 0-2.565-1.771-4.716-4.156-5.296zM16 26l-6-6h4v-6h4v6h4l-6 6z"></path>
-        </symbol>
         <symbol id="icon-cloud-upload" viewBox="0 0 32 32">
             <path d="M27.883 12.078c0.076-0.347 0.117-0.708 0.117-1.078 0-2.761-2.239-5-5-5-0.444 0-0.875 0.058-1.285 0.167-0.775-2.417-3.040-4.167-5.715-4.167-2.73 0-5.033 1.823-5.76 4.318-0.711-0.207-1.462-0.318-2.24-0.318-4.418 0-8 3.582-8 8s3.582 8 8 8h4v6h8v-6h7c2.761 0 5-2.239 5-5 0-2.46-1.777-4.505-4.117-4.922zM18 20v6h-4v-6h-5l7-7 7 7h-5z"></path>
         </symbol>
     </defs>
 </svg>
+<script src="js/lib/tiny-slider.js"></script>
 <script src="js/app.min.js"></script>
 </body>
 </html>
